syntax = "proto3";


message Sql{
    string sql = 1;
    repeated Param params = 2;
}

message Param{
    string tp = 1;
    oneof data {
        uint64 number = 2;
        string s = 3;
        bytes buffer = 4;
    }
}

message Msg{
    int32 code = 1;
    string detail = 2;
}


message BytesList{
    repeated bytes params = 1;
}

message AvailableStateList{
    repeated bytes params = 1;
}

message Bytes{
    bytes param = 1;
}