syntax = "proto3";
import "../../common/proto/common.proto";
import "../../state/proto/state.proto";

message TranscationInput{
    bytes arguments = 1;
    SignedState state = 2;
}

message Transaction{
    bytes id = 1;
    int64 timestamp = 2;
    repeated TranscationInput inputs = 3;
    repeated State outputs = 4;
}


message BareTransaction{
    repeated bytes inputs = 1; // state hash
    repeated bytes arguments = 2;
    repeated State outputs = 3;
}


